tests/ui/async-await/async-closures/move-from-async-fn-bound.stderr
error[E0507]: cannot move out of `y`, a captured variable in an `AsyncFn` closure
  --> $DIR/move-from-async-fn-bound.rs:9:10
   |
LL |     let y = vec![format!("World")];
   |         - captured outer variable
LL |     call(async || {
   |          ^^^^^^^^
   |          |
   |          captured by this `AsyncFn` closure
   |          `y` is moved here
LL |
LL |         y.into_iter();
   |         -
   |         |
   |         variable moved due to use in coroutine
   |         move occurs because `y` has type `Vec<String>`, which does not implement the `Copy` trait
   |
help: `AsyncFn` and `AsyncFnMut` closures require captured values to be able to be consumed multiple times, but `AsyncFnOnce` closures may consume them only once
  --> $DIR/move-from-async-fn-bound.rs:5:27
   |
LL | fn call<F>(_: F) where F: AsyncFn() {}
   |                           ^^^^^^^^^
help: consider cloning the value if the performance cost is acceptable
   |
LL |         y.clone().into_iter();
   |          ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
